--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -36,7 +36,7 @@
 
   <!-- ======= Sidebar ======= -->
   {% include 'layout/leftside_navbar.html' %}
-  <!-- End Sidebar-->#}
+  <!-- End Sidebar-->
 
   {% block content %} {% endblock %}
 
