--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -660,6 +660,6 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  {%  include 'layout/include_js.html' %}
+{#  {%  include 'layout/include_js.html' %}#}
 
 {% endblock %}
