--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -38,8 +38,10 @@
   {% include 'layout/leftside_navbar.html' %}
   <!-- End Sidebar-->
 
-  {% block content %} {% endblock %}
+  {% block content %}
 
+  {% endblock %}
+ {%  include 'layout/include_js.html' %}
   <!-- ======= Footer ======= -->
   {% include 'layout/footer.html' %}
   <!-- End Footer -->
